k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-app-svc
  namespace: demo-app
spec:
  selector:
    app: devops-demo-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
