k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-app-ingress
  namespace: demo-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: demo-app.<your-domain-or-nip.io>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-demo-app-svc
                port:
                  number: 80
